# Distortopia-demo

./: .gitignore  README.md  TODO.md  environment.yml  pyproject.toml  streamlit_app.py
alignments/: test.list
alt_refs/: A_lyrata.fna.fai  A_thaliana.fna.fai
deprecated/scripts/: align_hifi_reads.py  mutate.py  sim_gamete_long_reads.py
disto.egg-info/: SOURCES.txt
haptools/haptools/: __main__.py
references/: Raiyemo_AT_hap1.fna.fai
runs/local_AT018/: AT018_debug10k.biallelic_het.vcf.gz.csi  AT018_debug10k.phased.vcf.gz.csi  AT018_debug10k.vcf.gz.csi
runs/local_AT018_50k/: AT018_50k.biallelic_het.vcf.gz.csi  AT018_50k.phased.vcf.gz.csi  AT018_50k.vcf.gz.csi
scripts/: align_hifi_reads.py  compare_variant_vcfs.py  find_crossovers.py  haplotog_helper.py  phase_haplotypes.py  run_alignments.py  sim_gamete_long_reads.py  sim_haplotypes.py  visualize_crossovers.py
src/: cli_collapse.py  cli_filter.py  cli_infer.py  cli_main.py  cli_mapcall.py  cli_plot.py  cli_simulate.py  collapse.py  environment.yml  filter.py  infer.py  mapcall.py  plot.py  plot_map.py  rate_map.py  simulate.py
variants/: Aly_bcftools.stats  Athal_bcftools.stats
